src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;
 
@layer base {
  :root {
      --background: 0 0% 100% /* white */;
      --foreground: 240 10% 4% /* zinc-950 */;
      --card: 0 0% 100% /* white */;
      --card-foreground: 240 10% 4% /* zinc-950 */;
      --popover: 0 0% 100% /* white */;
      --popover-foreground: 240 10% 4% /* zinc-950 */;
      --primary: 201 99% 40% /* sky-600 */;
      --primary-foreground: 205 100% 98% /* sky-50 */;
      --secondary: 27 81% 62% /* orange-400 */;
      --secondary-foreground: 16 75% 28% /* orange-900 */;
      --muted: 240 5% 96% /* zinc-100 */;
      --muted-foreground: 240 4% 47% /* zinc-500 */;
      --accent: 240 5% 96% /* zinc-100 */;
      --accent-foreground: 203 81% 24% /* sky-900 */;
      --destructive: 0 85% 61% /* red-500 */;
      --destructive-foreground: 0 0% 99% /* zinc-50 */;
      --border: 240 6% 90% /* zinc-200 */;
      --input: 240 6% 90% /* zinc-200 */;
      --ring: 201 99% 40% /* sky-600 */;
      --radius: 0.5rem;
  }

  .dark {
      --background: 240 10% 4% /* zinc-950 */;
      --foreground: 0 0% 99% /* zinc-50 */;
      --card: 240 10% 4% /* zinc-950 */;
      --card-foreground: 0 0% 99% /* zinc-50 */;
      --popover: 240 10% 4% /* zinc-950 */;
      --popover-foreground: 0 0% 99% /* zinc-50 */;
      --primary: 201 99% 40% /* sky-600 */;
      --primary-foreground: 205 100% 98% /* sky-50 */;
      --secondary: 15 80% 34% /* orange-800 */;
      --secondary-foreground: 34 100% 97% /* orange-50 */;
      --muted: 240 4% 16% /* zinc-800 */;
      --muted-foreground: 240 6% 65% /* zinc-400 */;
      --accent: 240 4% 16% /* zinc-800 */;
      --accent-foreground: 205 100% 98% /* sky-50 */;
      --destructive: 0 63% 31% /* red-900 */;
      --destructive-foreground: 0 0% 99% /* zinc-50 */;
      --border: 240 4% 16% /* zinc-800 */;
      --input: 240 4% 16% /* zinc-800 */;
      --ring: 201 99% 40% /* sky-600 */;
  }
}
 
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.leaflet-pane {
  z-index: 1 !important;
}

.leaflet-bottom {
  z-index: 1 !important;
}

.leaflet-container {
  background: transparent !important;
}



/* Make clicks pass-through */
#nprogress {
  pointer-events: none;
}

#nprogress .bar {
  background: #29d;

  position: fixed;
  z-index: 1031;
  top: 0;
  left: 0;

  width: 100%;
  height: 2px;
}

/* Fancy blur effect */
#nprogress .peg {
  display: block;
  position: absolute;
  right: 0px;
  width: 100px;
  height: 100%;
  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
  opacity: 1.0;

  -webkit-transform: rotate(3deg) translate(0px, -4px);
  -ms-transform: rotate(3deg) translate(0px, -4px);
  transform: rotate(3deg) translate(0px, -4px);
}

/* Remove these to get rid of the spinner */
#nprogress .spinner {
  display: block;
  position: fixed;
  z-index: 1031;
  top: 15px;
  right: 15px;
}

#nprogress .spinner-icon {
  width: 18px;
  height: 18px;
  box-sizing: border-box;

  border: solid 2px transparent;
  border-top-color: #29d;
  border-left-color: #29d;
  border-radius: 50%;

  -webkit-animation: nprogress-spinner 400ms linear infinite;
  animation: nprogress-spinner 400ms linear infinite;
}

.nprogress-custom-parent {
  overflow: hidden;
  position: relative;
}

.nprogress-custom-parent #nprogress .spinner,
.nprogress-custom-parent #nprogress .bar {
  position: absolute;
}

@-webkit-keyframes nprogress-spinner {
  0% {
    -webkit-transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes nprogress-spinner {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

